ftransc 6.0.6 (05 Apr 2017)
    + Adding youtube playlist support
ftransc 6.0.0 (01 Aug 2016):
    + New reworked version. Not backward compatible.
ftransc 5.1.7 (26 Aug 2015):
	+ fixed rhythmbox plugin

ftransc 5.1.6 (10 Aug 2015):
	+ installing dependencies via make install

ftransc 5.1.5 (10 Aug 2015):
	+ added title and artist columns on ftransc_qt

ftransc 5.1.4 (10 Aug 2015):
	+ code cleanup.

ftransc 5.1.3 (09 Aug 2015):
	+ fixed working out ffmpeg/avconv utility

ftransc 5.1.1 (19 Nov 2013):
	+ fixed broken nautilus scripts
	+ added convert to avi video (experimental)

ftransc 5.1.0 (17 Feb 2013):
	+ added the -x option to be able to use external encoder if it is
	available (eg using FFmpeg to decode and pipe to lame to encode instead of
	using ffmpeg to decode and encode via libmp3lame)

ftransc 5.0.9 (02 Feb 2013):
    + added WavPack support

ftransc 5.0.8 (13 Jan 2013):
	+ using FFmpeg to encode any supported format where possible

ftransc 5.0.7 (04 Nov 2012):
	+ Added cover art insertion support to flac files

ftransc 5.0.6 (03 Nov 2012):
	+ Fixed bug when disk number is present in the metadata which caused all
	metadata to be dropped
	+ Added support for extraction of metadata from .3gp files

ftransc 5.0.5 (28 Oct 2012):
	+ Merged the CoverTag class into MetaTag class
	+ Fixed bug when the default 'normal' preset is not in the presets file
	+ Generating fewer consumer processes when there are fewer files than CPU
	count

ftransc 5.0.4 (19 Aug 2012):
	+ added --list-formats option
	+ added --processes/-p option

ftransc 5.0.3 (23 Jul 2012):
	+ moved away from ffmpeg to avconv

ftransc 5.0.2 (15 Jul 2012):
	+ added rhythmbox plugin
	+ added CD ripping via cdparanoia

ftransc 5.0.1 (15 Jul 2012):
	+ added multithreading.

ftransc 4.3.3 (25 Mar 2012):
	+ fixed fatal KeyError when converting .aac and .mp4 files

ftransc 4.3.2 (10 Mar 2012):
	+ added album artist, disk number, and comment metadata tags to some
	formats