@@ -9,18 +9,6 @@ import ftransc.core.queue
 import ftransc.utils
 
 
-
-
-
-def determine_number_of_workers(number_of_files, desired_number_of_workers):
-    num_processes = multiprocessing.cpu_count()
-    if desired_number_of_workers > 0:
-        return desired_number_of_workers
-    if number_of_files < num_processes:
-        return number_of_files
-    return num_processes
-
-
 def cli():
     opt, files = ftransc.utils.parse_args()
 
@@ -46,7 +34,6 @@ def cli():
     audio_preset = ftransc.utils.get_audio_presets(audio_format, audio_quality=audio_quality, external_encoder=opt.external_encoder)
 
     if opt.walk is not None:
-        walker = os.walk(opt.walk)
         for working_directory, _, files in os.walk(opt.walk):
             break
         else:
@@ -61,14 +48,14 @@ def cli():
         queue.put(filename)
 
     time.sleep(1)  # wait a sec before start processing. queue might not be full yet
-    num_workers = determine_number_of_workers(len(files), opt.num_procs)
+    num_workers = ftransc.utils.determine_number_of_workers(files, opt.num_procs)
     output_directory = ftransc.utils.create_directory(opt.outdir)
     for process_count in range(1, num_workers + 1):
         process_name = 'P%d' % process_count
-        worker_args = (queue, process_name, home_directory, output_directory, audio_format, audio_preset, opt)
+        exit_delay = ftransc.utils.has_youtube_playlist(files)
+        worker_args = (queue, process_name, home_directory, output_directory, audio_format, audio_preset, opt, exit_delay)
         process = multiprocessing.Process(target=ftransc.core.queue.worker, args=worker_args)
         process.daemon = True
         process.start()
 
-    queue.close()
     queue.join()
