@@ -1,6 +1,6 @@
 from setuptools import setup
 
-version = '6.0.8'
+version = '6.0.9'
 
 requirements = [
     'nose',
