@@ -1,4 +1,6 @@
-ftransc 6.0.6 (05 Apr 2017)
+ftransc 6.0.9 (07 April 2017):
+    + Performance improvements when transcoding files from youtube playlists
+ftransc 6.0.6 (05 Apr 2017):
     + Adding youtube playlist support
 ftransc 6.0.0 (01 Aug 2016):
     + New reworked version. Not backward compatible.
